--- a/src/nav.css
+++ b/src/nav.css
@@ -1,5 +1,5 @@
 body.dark-mode .navbar {
-    background-color: black !important;
+    background-color: transparent !important;
 }
 
 
@@ -19,7 +19,7 @@ body.dark-mode .navbar {
   font-size: 40px;
   background-color: red;
   height: 100%;
-  padding: 5px;
+  padding: 8px;
   background-image: linear-gradient(
     45deg,
     rgb(135, 208, 184),
